--- a/app/src/main/res/layout/fragment_your_trips.xml
+++ b/app/src/main/res/layout/fragment_your_trips.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="4dp"
+    android:background="@color/background"
     android:orientation="vertical">
 
 
