--- a/app/src/main/res/layout/my_expense_dialog.xml
+++ b/app/src/main/res/layout/my_expense_dialog.xml
@@ -31,6 +31,35 @@
 
         </ListView>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="end"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+
+            >
+
+            <TextView
+                android:id="@+id/totalTEXT"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TOTAL: "
+                />
+
+            <TextView
+                android:id="@+id/totalAMOUNT"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="5454"
+
+                />
+
+
+
+        </LinearLayout>
+
         <Button
             android:id="@+id/my_expense_save"
             android:layout_width="100dp"
@@ -40,6 +69,8 @@
             android:text="Save"/>
 
     </LinearLayout>
+
+
 
 
 </android.support.v4.widget.NestedScrollView>
