--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -12,4 +12,14 @@
     android:elevation="4dp"
     >
 
+
+    <TextView
+        android:id="@+id/toolbarTXT"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:textSize="16sp"
+        android:text=""/>
+
 </android.support.v7.widget.Toolbar>
